k3s-arr/sabnzbd/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app.kubernetes.io/name: sabnzbd
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /mnt/gluster/appdata/sabnzbd
        - name: downloads
          hostPath:
            path: /mnt/gluster/media

---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
