k3s-arr/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: sabnzbd.rahl.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
    - host: sabnzbd.fractal-financial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
  tls:
    - hosts:
        - sabnzbd.rahl.cc
        - sabnzbd.fractal-financial.com
